<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_waiting"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/waiting"
        android:textColor="@color/textColor"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tv_ordered"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ordered"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/cancel_call_taxi"
            android:textColor="@color/textColor"/>

        <Button
            android:id="@+id/btn_call"
            android:onClick="btnHandlerCall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/call_him"
            android:textColor="@color/textColor"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="btnHandlerDone"
            android:text="@string/done"
            android:textColor="@color/textColor"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>
